--- a/APM-Start/src/index.html
+++ b/APM-Start/src/index.html
@@ -9,6 +9,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <pm-root></pm-root>
+  <pm-root></pm-root> <!-- Using the directive here - the component as a html tag-->
 </body>
 </html>
